validate and fix contrasts

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,8 @@ li {
 }
 
 /* my styles */
+
+/* focuses */
 .input:focus,
 .navbar-item.logo-link:focus,
 .button.is-white.is-outlined:focus,
@@ -207,4 +209,47 @@ a.box:focus,
   outline: 0;
   border-radius: 2px;
   box-shadow: 0 0 2px 1.5px #bc6e6e, 0 0 3px 3px #f279dd;
+}
+
+/* contrasts */
+.button.is-info {
+  background-color: #0a5a8f;
+}
+
+.subtitle.is-5 {
+  color: #474747;
+}
+
+.hero.is-info .title {
+  background-color: #0e78be;
+}
+
+.tag.is-danger {
+  background-color: #e6002e;
+}
+
+.tag.is-primary.is-medium {
+  background-color: #008571;
+}
+
+.tag.is-light.is-danger.is-medium {
+  background-color: #e6002e;
+}
+
+.tag.is-success.is-medium {
+  background-color: #157a38;
+}
+
+.has-text-grey-light {
+  color: #707070;
+}
+
+.help.is-success {
+  color: #16833c;
+}
+
+.column.is-3 ul li a,
+.column.is-4 ul li a,
+.soc + p a {
+  color: #2262c9;
 }
